--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,22 @@
 <resources>
     <string name="app_name">Oscill</string>
+    <string name="title_activity_settings">SettingsActivity</string>
+    <string name="settings_button">Settings</string>
+
+    <!-- Preference Titles -->
+    <string name="grid_header">Grid displaying</string>
+    <string name="sync_header">Sync</string>
+
+    <!-- Messages Preferences -->
+    <string name="signature_title">Your signature</string>
+    <string name="reply_title">Default reply action</string>
+
+    <!-- Sync Preferences -->
+    <string name="grid_title">Turn on the grid</string>
+    <string name="brightness_of_grid_title">Brightness of the grid</string>
+    <string name="sync_title">Sync email periodically</string>
+    <string name="attachment_title">Download incoming attachments</string>
+    <string name="attachment_summary_on">Automatically download attachments for incoming emails
+    </string>
+    <string name="attachment_summary_off">Only download attachments when manually requested</string>
 </resources>
