--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,8 +4,8 @@
     <string name="settings_button">Settings</string>
 
     <!-- Preference Titles -->
-    <string name="grid_header">Grid displaying</string>
-    <string name="sync_header">Sync</string>
+    <string name="appearance_header">Appearance</string>
+    <string name="user_tools_header">User tools</string>
 
     <!-- Messages Preferences -->
     <string name="signature_title">Your signature</string>
@@ -14,9 +14,9 @@
     <!-- Sync Preferences -->
     <string name="grid_title">Turn on the grid</string>
     <string name="brightness_of_grid_title">Brightness of the grid</string>
-    <string name="sync_title">Sync email periodically</string>
-    <string name="attachment_title">Download incoming attachments</string>
-    <string name="attachment_summary_on">Automatically download attachments for incoming emails
-    </string>
-    <string name="attachment_summary_off">Only download attachments when manually requested</string>
+    <string name="brightness_of_ray_title">Brightness of the ray</string>
+    <string name="close_input_title">Close input</string>
+    <string name="close_input_summary">center sinusoid</string>
+    <string name="auto_set_title">Auto-set</string>
+    <string name="auto_set_summary">Move the graphic to the centre</string>
 </resources>
